# vs2019AsmSample

./: CMakeLists.txt  CMakeSettings.json  README.md
resource/: image1.drawio
sample1/: CMakeLists.txt  hoge_asm.asm  sample1.cpp  sample1.h
sample2/: CMakeLists.txt  PatternSearch.cpp  PatternSearch.h  dummy.c  hijack.cpp
sample3/: CMakeLists.txt  hooook.cpp  main.cpp  target_program.c
sample3/byte_search/: byte_pattern.cpp  byte_pattern.h
sample3/injector/: Injector.cpp  Injector.h
